--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
             padding: 2rem;
         }
 
+        .hero-portrait {
+            margin-bottom: 2rem;
+            animation: fadeInUp 1s ease 0.3s forwards;
+            opacity: 0;
+        }
+
+        .hero-portrait img {
+            width: 280px;
+            height: 280px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 4px solid var(--gold);
+            box-shadow: 0 0 60px rgba(201, 162, 39, 0.4), 0 20px 40px rgba(0, 0, 0, 0.5);
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
+        }
+
+        .hero-portrait img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 80px rgba(201, 162, 39, 0.6), 0 30px 60px rgba(0, 0, 0, 0.6);
+        }
+
         .hero-subtitle {
             font-size: 0.875rem;
             letter-spacing: 0.5em;
@@ -482,6 +503,9 @@
         </div>
 
         <div class="hero-content">
+            <div class="hero-portrait">
+                <img src="images/001-majestic-portrait-of-king-fa-ngum-in-gol.png" alt="King Fa Ngum" loading="eager">
+            </div>
             <p class="hero-subtitle">The First King of Laos</p>
             <h1>Fa Ngum</h1>
             <p class="hero-tagline">Million Elephants • White Parasol</p>
